Fix z-index for popup

--- a/packages/client/src/widgets/layout/UI/PopupBody/style.module.scss
+++ b/packages/client/src/widgets/layout/UI/PopupBody/style.module.scss
@@ -3,6 +3,7 @@
 	bottom: 10px;
 	left: 50%;
 	transform: translateX(-50%);
+	z-index: 5;
 
 	@media (max-width: 620px) {
 		& {
